--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Magdalenaarce" target="_blank"
+            >Magdalena Arce</a
+          >
+          and is
+          <a href="https://github.com/Magdalenaarce/hmw3" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://boisterous-starship-688c7b.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
